# Movie-Recommender

./: .gitignore  README.md  requirements.txt
backend/: README.md  pyproject.toml  system.yaml
backend/core/: actor.py  processor.py  qclient.py  utils.py
backend/server/: data_model.py  models_server.py
backend/tests/data/: sample.py
backend/tests/unit/: test_processor.py
