[tool.poetry]
name = "movie-recommender"
version = "0.1.0"
description = "A FastAPI application"
authors = ["vancityrahul7@gmail.com"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.3.0"
isort = "^5.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
