[tool.poetry]
name = "movie-recommender"
version = "0.1.0"
description = "A FastAPI application"
authors = ["vancityrahul7@gmail.com"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.0"
uvicorn = "0.30.6"
accelerate = "0.34.2"
aiohappyeyeballs = "2.4.0"
aiohttp = "3.10.5"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.6.0"
attrs = "24.2.0"
certifi = "2024.8.30"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
datasets = "3.0.0"
dill = "0.3.8"
filelock = "3.16.1"
FlagEmbedding = "1.2.11"
frozenlist = "1.4.1"
fsspec = "2024.6.1"
grpcio = "1.66.1"
grpcio-tools = "1.66.1"
h11 = "0.14.0"
h2 = "4.1.0"
hpack = "4.0.0"
httpcore = "1.0.5"
httpx = "0.27.2"
huggingface-hub = "0.25.0"
hyperframe = "6.0.1"
idna = "3.10"
Jinja2 = "3.1.4"
joblib = "1.4.2"
loguru = "0.7.2"
MarkupSafe = "2.1.5"
mpmath = "1.3.0"
multidict = "6.1.0"
multiprocess = "0.70.16"
networkx = "3.3"
numpy = "2.1.1"
packaging = "24.1"
pandas = "2.2.3"
peft = "0.12.0"
pillow = "10.4.0"
portalocker = "2.10.1"
protobuf = "5.28.2"
psutil = "6.0.0"
pyarrow = "17.0.0"
pydantic = "2.9.2"
pydantic_core = "2.23.4"
pykka = "4.0.2"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
pywin32 = "306"
PyYAML = "6.0.2"
qdrant-client = "1.11.2"
regex = "2024.9.11"
requests = "2.32.3"
safetensors = "0.4.5"
scikit-learn = "1.5.2"
scipy = "1.14.1"
sentence-transformers = "3.1.1"
six = "1.16.0"
smart-config = "0.1.3"
sniffio = "1.3.1"
starlette = "0.38.5"
sympy = "1.13.3"
threadpoolctl = "3.5.0"
tokenizers = "0.19.1"
toml = "0.10.2"
torch = "2.4.1"
tqdm = "4.66.5"
transformers = "4.44.2"
typing_extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.3"
win32-setctime = "1.1.0"
xxhash = "3.5.0"
yarl = "1.11.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.3.0"
isort = "^5.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
